2005-08-28	Istvan Varga	<ivarga@csounds.com>
	* Opcodes/ugnorman.c, Opcodes/ugnorman.h: new opcodes

2005-08-22	Istvan Varga	<ivarga@csounds.com>
	* Engine/musmon.c, H/csound.h, InOut/libsnd.c, Top/csound.c:
	  new API function: csoundSetHostImplementedAudioIO()
	  allows the host application to implement sound I/O with
	  direct access to the spin/spout buffers (or, with a non-zero
	  buffer size parameter and using csoundPerformBuffer(), the
	  input/output buffers), ignoring any -i, -o, -b, and -B options
	* H/csound.h, H/csoundCore.h, Top/threads.c:
	  added return value to csoundWaitThreadLock(); non-zero if
	  the function returns on timeout instead of the lock being notified

2005-08-20	Istvan Varga	<ivarga@csounds.com>
	* Engine/oload.c, H/csound.h, H/csoundCore.h, Top/threads.c:
	  new API function: csoundWaitThreadLockNoTimeout()
	  similar to csoundWaitThreadLock(), but with infinite timeout,
	  allowing for a possibly more efficient implementation
	* Top/threads.c:
	  csoundWaitThreadLock(): implemented timeout for Linux
	* H/csoundCore.h, H/envvar.h, SConstruct:
	  removed envvar.h from installation

2005-08-19	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c, Engine/otran.c, Engine/rdorch.c:
	* Opcodes/fout.c, Opcodes/oscbnk.c:
	  removed unneeded/redundant RESET code
	* H/csound.h, H/csoundCore.h, Top/threads.c:
	* InOut/rtpa.c, InOut/widgets.cpp, InOut/OSCrecv.c, Opcodes/OSC.c:
	  attempts to clean up thread interface
	* H/prototyp.h:
	  moved declaration of csoundYield() here from csound.h
	* examples/fl_controller/fl_controller.cpp:
	  fixed a few minor errors

2005-08-18	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c:
	* Top/csound.c:
	* Top/main.c:
	  changes to allow host applications to register opcodes with
	  csoundAppendOpcode(); should be called between csoundPreCompile()
	  and csoundCompile()
	* Engine/oload.c:
	* H/csound.h:
	* H/csoundCore.h:
	  removed csoundLoadExternal() and csoundLoadExternals() from public